# computer_network_hw

./: .gitignore  CMakeLists.txt  vcpkg.json
include/: ChatContext.h  ChatHistory.h  detail.h  env.h  http.h  jsonConvert.h  ollama.h  server.h  socket.h  socketAsync.h  util.h
src/: main.cpp
